# keymastro

./: .gitignore  Cargo.toml  Dockerfile  compile-note-for-linux.txt  config.json  readme.md
binaries/apple-silicon/: keymastro
src/: main.rs  utils.rs
